# bounding-box-drawer

./: .gitignore  docker-compose.yml
backend/: Dockerfile  config.py  logger.py  main.py  pyproject.toml
backend/database/: db_models.py  init_db.py  session.py
backend/routes/: image_routes.py
backend/services/: image_services.py
frontend/: package-lock.json  package.json  tsconfig.json
frontend/src/: index.css  index.tsx
frontend/src/components/: app-button.tsx  close-button.tsx  delete-button.tsx  img-drawing.tsx  img-list.tsx  load-button.tsx  save-button.tsx  upload-button.tsx  vertical-line.tsx
frontend/src/pages/home/: HomePage.tsx  ImgEditorPage.tsx
frontend/src/themes/: theme.tsx
