[tool.poetry]
name = "bounding-box-drawer"
version = "0.1.0"
description = ""
authors = ["zsocapowa <zsoca.powa@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
uvicorn = "^0.29.0"
sqlalchemy = "^2.0.30"
loguru = "^0.7.2"
psycopg2-binary = "^2.9.9"
boto3 = "^1.34.108"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
